Using more new java features.